archive/submission/y.output
State 85 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: scope

    2 scope: '{' statement_list '}'

    3 statement_list: statement_list statement
    4               | statement_list declaration
    5               | ε

    6 declaration: type ID ';'
    7            | type ID '=' expression ';'
    8            | CONST type ID '=' expression ';'

    9 statement: variable '=' expression ';'
   10          | IF '(' expression ')' statement ELSE statement
   11          | IF '(' expression ')' statement
   12          | scope
   13          | ';'

   14 type: INT_T
   15     | IVEC_T
   16     | BOOL_T
   17     | BVEC_T
   18     | FLOAT_T
   19     | VEC_T

   20 expression: type '(' arguments_opt ')'
   21           | FUNC '(' arguments_opt ')'
   22           | '-' expression
   23           | '!' expression
   24           | expression AND expression
   25           | expression OR expression
   26           | expression EQ expression
   27           | expression NEQ expression
   28           | expression '<' expression
   29           | expression LEQ expression
   30           | expression '>' expression
   31           | expression GEQ expression
   32           | expression '+' expression
   33           | expression '-' expression
   34           | expression '*' expression
   35           | expression '/' expression
   36           | expression '^' expression
   37           | TRUE_C
   38           | FALSE_C
   39           | INT_C
   40           | FLOAT_C
   41           | '(' expression ')'
   42           | variable

   43 variable: ID
   44         | ID '[' INT_C ']'

   45 arguments: arguments ',' expression
   46          | expression

   47 arguments_opt: arguments
   48              | ε


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 23
    '(' (40) 10 11 20 21 41
    ')' (41) 10 11 20 21 41
    '*' (42) 34
    '+' (43) 32
    ',' (44) 45
    '-' (45) 22 33
    '/' (47) 35
    ';' (59) 6 7 8 9 13
    '<' (60) 28
    '=' (61) 7 8 9
    '>' (62) 30
    '[' (91) 44
    ']' (93) 44
    '^' (94) 36
    '{' (123) 2
    '}' (125) 2
    error (256)
    FLOAT_T (258) 18
    INT_T (259) 14
    BOOL_T (260) 16
    CONST (261) 8
    FALSE_C (262) 38
    TRUE_C (263) 37
    IF (264) 10 11
    ELSE (265) 10
    AND (266) 24
    OR (267) 25
    NEQ (268) 27
    EQ (269) 26
    LEQ (270) 29
    GEQ (271) 31
    VEC_T <as_vec> (272) 19
    BVEC_T <as_vec> (273) 17
    IVEC_T <as_vec> (274) 15
    FLOAT_C <as_float> (275) 40
    INT_C <as_int> (276) 39 44
    ID <as_str> (277) 6 7 8 43 44
    FUNC <as_func> (278) 21
    UMINUS (279)
    WITHOUT_ELSE (280)
    WITH_ELSE (281)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program <as_ast> (45)
        on left: 1
        on right: 0
    scope <as_ast> (46)
        on left: 2
        on right: 1 12
    statement_list <as_ast> (47)
        on left: 3 4 5
        on right: 2 3 4
    declaration <as_ast> (48)
        on left: 6 7 8
        on right: 4
    statement <as_ast> (49)
        on left: 9 10 11 12 13
        on right: 3 10 11
    type <as_ast> (50)
        on left: 14 15 16 17 18 19
        on right: 6 7 8 20
    expression <as_ast> (51)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 7 8 9 10 11 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 41 45 46
    variable <as_ast> (52)
        on left: 43 44
        on right: 9 42
    arguments <as_ast> (53)
        on left: 45 46
        on right: 45 47
    arguments_opt <as_ast> (54)
        on left: 47 48
        on right: 20 21


State 0

    0 $accept: • program $end

    '{'  shift, and go to state 1

    program  go to state 2
    scope    go to state 3


State 1

    2 scope: '{' • statement_list '}'

    $default  reduce using rule 5 (statement_list)

    statement_list  go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: scope •

    $default  reduce using rule 1 (program)


State 4

    2 scope: '{' statement_list • '}'
    3 statement_list: statement_list • statement
    4               | statement_list • declaration

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    CONST    shift, and go to state 9
    IF       shift, and go to state 10
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    ID       shift, and go to state 14
    '{'      shift, and go to state 1
    '}'      shift, and go to state 15
    ';'      shift, and go to state 16

    scope        go to state 17
    declaration  go to state 18
    statement    go to state 19
    type         go to state 20
    variable     go to state 21


State 5

    0 $accept: program $end •

    $default  accept


State 6

   18 type: FLOAT_T •

    $default  reduce using rule 18 (type)


State 7

   14 type: INT_T •

    $default  reduce using rule 14 (type)


State 8

   16 type: BOOL_T •

    $default  reduce using rule 16 (type)


State 9

    8 declaration: CONST • type ID '=' expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13

    type  go to state 22


State 10

   10 statement: IF • '(' expression ')' statement ELSE statement
   11          | IF • '(' expression ')' statement

    '('  shift, and go to state 23


State 11

   19 type: VEC_T •

    $default  reduce using rule 19 (type)


State 12

   17 type: BVEC_T •

    $default  reduce using rule 17 (type)


State 13

   15 type: IVEC_T •

    $default  reduce using rule 15 (type)


State 14

   43 variable: ID •
   44         | ID • '[' INT_C ']'

    '['  shift, and go to state 24

    $default  reduce using rule 43 (variable)


State 15

    2 scope: '{' statement_list '}' •

    $default  reduce using rule 2 (scope)


State 16

   13 statement: ';' •

    $default  reduce using rule 13 (statement)


State 17

   12 statement: scope •

    $default  reduce using rule 12 (statement)


State 18

    4 statement_list: statement_list declaration •

    $default  reduce using rule 4 (statement_list)


State 19

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 20

    6 declaration: type • ID ';'
    7            | type • ID '=' expression ';'

    ID  shift, and go to state 25


State 21

    9 statement: variable • '=' expression ';'

    '='  shift, and go to state 26


State 22

    8 declaration: CONST type • ID '=' expression ';'

    ID  shift, and go to state 27


State 23

   10 statement: IF '(' • expression ')' statement ELSE statement
   11          | IF '(' • expression ')' statement

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 37
    variable    go to state 38


State 24

   44 variable: ID '[' • INT_C ']'

    INT_C  shift, and go to state 39


State 25

    6 declaration: type ID • ';'
    7            | type ID • '=' expression ';'

    ';'  shift, and go to state 40
    '='  shift, and go to state 41


State 26

    9 statement: variable '=' • expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 42
    variable    go to state 38


State 27

    8 declaration: CONST type ID • '=' expression ';'

    '='  shift, and go to state 43


State 28

   38 expression: FALSE_C •

    $default  reduce using rule 38 (expression)


State 29

   37 expression: TRUE_C •

    $default  reduce using rule 37 (expression)


State 30

   40 expression: FLOAT_C •

    $default  reduce using rule 40 (expression)


State 31

   39 expression: INT_C •

    $default  reduce using rule 39 (expression)


State 32

   21 expression: FUNC • '(' arguments_opt ')'

    '('  shift, and go to state 44


State 33

   22 expression: '-' • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 45
    variable    go to state 38


State 34

   23 expression: '!' • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 46
    variable    go to state 38


State 35

   41 expression: '(' • expression ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 47
    variable    go to state 38


State 36

   20 expression: type • '(' arguments_opt ')'

    '('  shift, and go to state 48


State 37

   10 statement: IF '(' expression • ')' statement ELSE statement
   11          | IF '(' expression • ')' statement
   24 expression: expression • AND expression
   25           | expression • OR expression
   26           | expression • EQ expression
   27           | expression • NEQ expression
   28           | expression • '<' expression
   29           | expression • LEQ expression
   30           | expression • '>' expression
   31           | expression • GEQ expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '*' expression
   35           | expression • '/' expression
   36           | expression • '^' expression

    AND  shift, and go to state 49
    OR   shift, and go to state 50
    NEQ  shift, and go to state 51
    EQ   shift, and go to state 52
    LEQ  shift, and go to state 53
    GEQ  shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ')'  shift, and go to state 62


State 38

   42 expression: variable •

    $default  reduce using rule 42 (expression)


State 39

   44 variable: ID '[' INT_C • ']'

    ']'  shift, and go to state 63


State 40

    6 declaration: type ID ';' •

    $default  reduce using rule 6 (declaration)


State 41

    7 declaration: type ID '=' • expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 64
    variable    go to state 38


State 42

    9 statement: variable '=' expression • ';'
   24 expression: expression • AND expression
   25           | expression • OR expression
   26           | expression • EQ expression
   27           | expression • NEQ expression
   28           | expression • '<' expression
   29           | expression • LEQ expression
   30           | expression • '>' expression
   31           | expression • GEQ expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '*' expression
   35           | expression • '/' expression
   36           | expression • '^' expression

    AND  shift, and go to state 49
    OR   shift, and go to state 50
    NEQ  shift, and go to state 51
    EQ   shift, and go to state 52
    LEQ  shift, and go to state 53
    GEQ  shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ';'  shift, and go to state 65


State 43

    8 declaration: CONST type ID '=' • expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 66
    variable    go to state 38


State 44

   21 expression: FUNC '(' • arguments_opt ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    $default  reduce using rule 48 (arguments_opt)

    type           go to state 36
    expression     go to state 67
    variable       go to state 38
    arguments      go to state 68
    arguments_opt  go to state 69


State 45

   22 expression: '-' expression •
   24           | expression • AND expression
   25           | expression • OR expression
   26           | expression • EQ expression
   27           | expression • NEQ expression
   28           | expression • '<' expression
   29           | expression • LEQ expression
   30           | expression • '>' expression
   31           | expression • GEQ expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '*' expression
   35           | expression • '/' expression
   36           | expression • '^' expression

    $default  reduce using rule 22 (expression)


State 46

   23 expression: '!' expression •
   24           | expression • AND expression
   25           | expression • OR expression
   26           | expression • EQ expression
   27           | expression • NEQ expression
   28           | expression • '<' expression
   29           | expression • LEQ expression
   30           | expression • '>' expression
   31           | expression • GEQ expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '*' expression
   35           | expression • '/' expression
   36           | expression • '^' expression

    $default  reduce using rule 23 (expression)


State 47

   24 expression: expression • AND expression
   25           | expression • OR expression
   26           | expression • EQ expression
   27           | expression • NEQ expression
   28           | expression • '<' expression
   29           | expression • LEQ expression
   30           | expression • '>' expression
   31           | expression • GEQ expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '*' expression
   35           | expression • '/' expression
   36           | expression • '^' expression
   41           | '(' expression • ')'

    AND  shift, and go to state 49
    OR   shift, and go to state 50
    NEQ  shift, and go to state 51
    EQ   shift, and go to state 52
    LEQ  shift, and go to state 53
    GEQ  shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '^'  shift, and go to state 61
    ')'  shift, and go to state 70


State 48

   20 expression: type '(' • arguments_opt ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    $default  reduce using rule 48 (arguments_opt)

    type           go to state 36
    expression     go to state 67
    variable       go to state 38
    arguments      go to state 68
    arguments_opt  go to state 71


State 49

   24 expression: expression AND • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 72
    variable    go to state 38


State 50

   25 expression: expression OR • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 73
    variable    go to state 38


State 51

   27 expression: expression NEQ • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 74
    variable    go to state 38


State 52

   26 expression: expression EQ • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 75
    variable    go to state 38


State 53

   29 expression: expression LEQ • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 76
    variable    go to state 38


State 54

   31 expression: expression GEQ • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 77
    variable    go to state 38


State 55

   28 expression: expression '<' • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 78
    variable    go to state 38


State 56

   30 expression: expression '>' • expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 28
    TRUE_C   shift, and go to state 29
    VEC_T    shift, and go to state 11
    BVEC_T   shift, and go to state 12
    IVEC_T   shift, and go to state 13
    FLOAT_C  shift, and go to state 30
    INT_C    shift, and go to state 31
    ID       shift, and go to state 14
    FUNC     shift, and go to state 32
    '-'      shift, and go to state 33
    '!'      shift, and go to state 34
    '('      shift, and go to state 35

    type        go to state 36
    expression  go to state 79
    variable    go to state 38


State 57

   32 expression: expression '+' • expression
